Bug 118220 - LO Base : Tools -> Table Filter crashes
Summary: LO Base : Tools -> Table Filter crashes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2018-06-18 08:54 UTC by Alex Kempshall
Modified: 2018-06-20 13:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bibisect log for tdf118220 (1.32 KB, text/x-log)
2018-06-18 08:58 UTC, Alex Kempshall
Details
Base application to replicate bug (36.99 KB, application/vnd.oasis.opendocument.database)
2018-06-18 12:09 UTC, Alex Kempshall
Details
Valgrind trace (31.77 KB, application/x-bzip)
2018-06-18 19:13 UTC, Julien Nabet
Details
bt with debug symbols (7.53 KB, text/plain)
2018-06-18 19:22 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Kempshall 2018-06-18 08:54:33 UTC
Start LO Base application

On exit from Tools -> Table Filter. LO crashes.

Not sure if this just relates to apps that have a mysql backend or all backends.

I've done a bibisect and will attach log shortly and a program to recreate the problem.
Comment 1 Alex Kempshall 2018-06-18 08:58:20 UTC
Created attachment 142840 [details]
bibisect log for tdf118220

bibisect log for tdf118220 i shall try and attempt to find the actual commit.
Comment 2 Alex Kempshall 2018-06-18 12:09:34 UTC
Created attachment 142854 [details]
Base application to replicate bug

Start application.

Tools -> Table Filter

A Dialog Box should appear

Answer <Later> to question "Would you like to migrate to Firebird now?"

The Table Filters Dialog should appear

Push the <Cancel> button

Document Recovery dialog should appear.

Push the <OK> button

Document Recovery dialog should appear.

Push the <Cancel> button

Answer <Yes> to question "Are you sure you want to discard the LibreOfficeDev document recovery data?"

LibreOffice should restart.
Comment 3 Xisco Faulí 2018-06-18 14:15:17 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-05-18 13:49:03 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-05-29 09:58:26 +0200
commit b69457c1a5cb31c8b0fb3d047e2826bc3d61fea4 (patch)
tree 8b6c9b3a9b38dc59dbccc6ac58c1ee7ac6503d42
parent 07610feeeff47fc5bbe057c91c50ffae54a41c85 (diff)
loplugin:useuniqueptr in OTableSubscriptionDialog

Bisected with: bibisect-linux64-6.2

Adding Cc: to Noel Grandin
Comment 4 Julien Nabet 2018-06-18 19:13:08 UTC
Created attachment 142880 [details]
Valgrind trace

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 5 Julien Nabet 2018-06-18 19:22:02 UTC
Created attachment 142881 [details]
bt with debug symbols
Comment 6 Julien Nabet 2018-06-18 19:52:04 UTC
I confirm than when reverting b69457c1a5cb31c8b0fb3d047e2826bc3d61fea4 I don't reproduce the crash.
Comment 7 Commit Notification 2018-06-19 18:32:17 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b28464abc71c28450784f15ce8344da8b316da86

tdf#118220 Base : Tools -> Table Filter crashes

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Alex Kempshall 2018-06-20 06:54:01 UTC
Master works for me.

Thanks.
Comment 9 Xisco Faulí 2018-06-20 13:38:05 UTC
(In reply to Alex Kempshall from comment #8)
> Master works for me.
> 
> Thanks.

Setting to VERIFIED