tdf#118220 Base : Tools -> Table Filter crashes

regression from
    commit	b69457c1a5cb31c8b0fb3d047e2826bc3d61fea4
    loplugin:useuniqueptr in OTableSubscriptionDialog

Change-Id: Ia746f9fc960fde52599cffbb8be344c35172aab0